src/plugins/cpptools/cppcompletion_test.cpp
@@ -2623,6 +2623,20 @@ void CppToolsPlugin::test_completion_data()
     ) << _("s.") << (QStringList()
         << QLatin1String("S"));
 
+    QTest::newRow("partial_specialization") << _(
+            "struct b {};\n"
+            "template<class X, class Y> struct s { float f; };\n"
+            "template<class X> struct s<X, b> { int i; };\n"
+            "\n"
+            "void f()\n"
+            "{\n"
+            "    s<int, b> var;\n"
+            "    @\n"
+            "}\n"
+    ) << _("var.") << (QStringList()
+        << QLatin1String("i")
+        << QLatin1String("s"));
+
     QTest::newRow("auto_declaration_in_if_condition") << _(
             "struct Foo { int bar; };\n"
             "void fun() {\n"
